Fix image links

--- a/art.html
+++ b/art.html
@@ -26,19 +26,19 @@ a:visited {
 
 <p>some of the artworks are copied from photos that are not mine and is not used for selling or distribution</p>
 <br>
-<img src="kai.jpg" alt="Kai" width=600 height:1000/><br>
+<img src="images/kai.jpg" alt="Kai" width=600 height:1000/><br>
 
-<img src="tea.jpg" alt="Tea" width=600 height:1000/><br>
+<img src="images/tea.jpg" alt="Tea" width=600 height:1000/><br>
 
-<img src="hotchoco.jpg" alt="Hot Chocolate" width=600 height:1000/><br>
+<img src="images/hotchoco.jpg" alt="Hot Chocolate" width=600 height:1000/><br>
 
-<img src="coffee.jpg" alt="Coffee" width=600 height:1000/><br>
+<img src="images/coffee.jpg" alt="Coffee" width=600 height:1000/><br>
 
-<img src="tristan.jpg" alt="Tristan" width=600 height:1000/><br>
+<img src="images/tristan.jpg" alt="Tristan" width=600 height:1000/><br>
 
-<img src="child.jpg" alt="Child" width=600 height:1000/><br>
+<img src="images/child.jpg" alt="Child" width=600 height:1000/><br>
 
-<img src="josephbeuys.jpg" alt="JBeuys" width=600 height:1000/>
+<img src="images/josephbeuys.jpg" alt="JBeuys" width=600 height:1000/>
 
 <br>
 <br>
