--- a/photography.html
+++ b/photography.html
@@ -21,23 +21,23 @@ a:visited {
 <body>
 <article>
 
-<img src="Angie.jpg" alt="neighbour" width=600 height:1000/><br>
+<img src="images2/Angie.jpg" alt="neighbour" width=600 height:1000/><br>
 
-<img src="Cassia.jpg" alt="neighbour" width=600 height:1000/><br>
+<img src="images2/Cassia.jpg" alt="neighbour" width=600 height:1000/><br>
 
-<img src="bubba.jpg" alt="son" width=600 height:1000/><br>
+<img src="images2/bubba.jpg" alt="son" width=600 height:1000/><br>
 
-<img src="home.jpg" alt="home" width=600 height:1000/><br>
+<img src="images2/home.jpg" alt="home" width=600 height:1000/><br>
 
-<img src="alligatorboy.jpg" alt="halloween" width=600 height:1000/><br>
+<img src="images2/alligatorboy.jpg" alt="halloween" width=600 height:1000/><br>
 
-<img src="Cassia2.jpg" alt="neighbour" width=600 height:1000/><br>
+<img src="images2/Cassia2.jpg" alt="neighbour" width=600 height:1000/><br>
 
-<img src="Cassia3.jpg" alt="neighbour" width=600 height:1000/><br>
+<img src="images2/Cassia3.jpg" alt="neighbour" width=600 height:1000/><br>
 
-<img src="lady.jpg" alt="book" width=600 height:1000/><br>
+<img src="images2/lady.jpg" alt="book" width=600 height:1000/><br>
 
-<img src="kittenandkai.jpg" alt="friends" width=600 height:1000/>
+<img src="images2/kittenandkai.jpg" alt="friends" width=600 height:1000/>
 
 <br>
 <br>
