--- a/poetry.html
+++ b/poetry.html
@@ -116,6 +116,45 @@ before the hurt <br>
 anyway.</p>
 <br>
 <br>
+	
+<h1>The Hopeful Buried Poem</h1>
+
+<p>I believe in dialectics, 
+The No nonsense evolution
+Of how we will survive, 
+We eat crap, we wreck shit 
+But when things get terminal
+We clean house
+Abolished slavery, 
+We work 8 hours instead of 16,
+We put scary screwy faces on 
+Cigarette packs to warn of the obvious,
+Women can vote,
+Everybody can get married,
+We knit jumpers for penguins,
+We eschew violence of any form,</p>>
+
+<p>It does get better specially when it gets
+To its worse,
+So I am hopeful that by the time everybody 
+Cannot afford a cup of some exotic caffeine concoction
+Everybody does not want it anymore
+When that overprized 4 point 1000 versionized upgrade 
+Is out in the market
+We've already realized the joke</p>>
+
+<p>I feel the same about writing poetry
+I know it will not amount to much 
+But I'm hoping one day 
+We are all golden shiny people 
+They will say:
+She speaks like us.</p>>
+<br>
+<br>
+<br>
+	
+<br>
+<br>
 <br>
 <a href="index.html" style="text-decoration:none">home</a>
 
