--- a/poetry.html
+++ b/poetry.html
@@ -132,7 +132,7 @@ Cigarette packs to warn of the obvious,<br>
 Women can vote,<br>
 Everybody can get married,<br>
 We knit jumpers for penguins,<br>
-We eschew violence of any form,</p><br>
+We eschew violence of any form,</p>
 
 <p>It does get better specially when it gets<br>
 To its worse,<br>
@@ -141,7 +141,7 @@ Cannot afford a cup of some exotic caffeine concoction<br>
 Everybody does not want it anymore<br>
 When that overprized 4 point 1000 versionized upgrade<br>
 Is out in the market<br>
-We've already realized the joke</p><br>
+We've already realized the joke</p>
 
 <p>I feel the same about writing poetry<br>
 I know it will not amount to much<br> 
