--- a/photography.html
+++ b/photography.html
@@ -25,7 +25,7 @@ a:visited {
 
 <img src="images2/Cassia.jpg" alt="neighbour" width=600 height:1000/><br>
 
-<img src="images2/bubba.jpg" alt="son" width=600 height:1000/><br>
+<img src="images2/bubba.jpg" alt="kai" width=600 height:1000/><br>
 
 <img src="images2/home.jpg" alt="home" width=600 height:1000/><br>
 
